feat: Implement a new portfolio layout with category and year filtering, and add initial project posts with associated media.

--- a/content/posts/智慧型自動化壓力測試系統.md
+++ b/content/posts/智慧型自動化壓力測試系統.md
@@ -1,13 +1,15 @@
 ---
 title: 智慧型自動化壓力測試系統：融合物理特性建模預測與 AI 視覺化分析
-date: 2024-11-10
+date: 2025-11-10
 categories:
 - 專業技術
 tags:
 - Golang
 - Grafana
-- ML
-- AI
+- Deep Learning/Machine Learning
+- Automation
+- CI/CD
+
 thumbnailImagePosition: left
 thumbnailImage: /postImg/smartfan/4D_graph.png
 ---
@@ -16,7 +18,6 @@ thumbnailImage: /postImg/smartfan/4D_graph.png
 
 <!--more-->
 
-*Created: April 24, 2022 1:16 AM*
 
 # 智慧型自動化壓力測試系統：融合物理特性建模預測與 AI 視覺化分析
 **(Smart Automated Stress Testing System: Physical Characteristic Modeling & AI Visual Analysis)**
