--- a/content/posts/物聯網溫溼度感測器即時監控系統.md
+++ b/content/posts/物聯網溫溼度感測器即時監控系統.md
@@ -5,16 +5,23 @@ date: 2022-04-20
 categories:
 - 大學生專題
 tags:
-- 物聯網
+- IoT
 - Raspberry Pi
+- MQTT
+- NodeMCU
+- ESP8266
+- Python
+- Arduino
+- Temperature
+- Humidity
+- Monitoring
+
 thumbnailImagePosition: left
 thumbnailImage: /postImg/物聯網溫溼度感測器即時監控系統/0.png
 ---
 
 使用MQTT傳輸協定為基礎，透過Raspberry Pi、NodeMCU等裝置來實現基本的物聯網遠端即時監控系統
 <!--more-->
-
-*Created: April 24, 2022 1:16 AM*
 
 ## 摘要
 
