--- a/content/posts/長照2 0服務整合平台.md
+++ b/content/posts/長照2 0服務整合平台.md
@@ -6,6 +6,12 @@ categories:
 - 大學生專題
 tags:
 - AndroidStudio
+- MySQL
+- MobileApp
+- HealthTech
+- Innovation
+- CloudComputing
+
 thumbnailImagePosition: left
 thumbnailImage: /postImg/長照2.0服務整合平台/1.png
 ---
@@ -15,8 +21,6 @@ thumbnailImage: /postImg/長照2.0服務整合平台/1.png
 透過設計便捷的APP呼叫方式，以便年長者自行操作系統。
 <!--more-->
 
-
-*Created: August 7, 2021 12:07 PM*
 
 > **專利公告號：M556380**
 獲得	107年度	U-start創新創業計畫第一階段補助	**50萬**
