fix: resolve taxonomy 404s and add i18n support
- Fix: /graduate-project 404 by creating category page with custom URL
- Fix: /deep-learning/machine-learning 404 by renaming tag to remove '/'
- Feat: Add multi-language support (en/zh-tw) for all taxonomy pages

--- a/content/posts/智慧型自動化壓力測試系統.en.md
+++ b/content/posts/智慧型自動化壓力測試系統.en.md
@@ -7,7 +7,7 @@ categories:
 tags:
 - Golang
 - Grafana
-- Deep Learning/Machine Learning
+- Deep Learning & Machine Learning
 - Automation
 - CI/CD
 
