--- a/content/posts/智慧型自動化壓力測試系統.md
+++ b/content/posts/智慧型自動化壓力測試系統.md
@@ -7,7 +7,7 @@ categories:
 tags:
 - Golang
 - Grafana
-- Deep Learning/Machine Learning
+- Deep Learning & Machine Learning
 - Automation
 - CI/CD
 
