feat: Add new blog posts, images, and a custom category taxonomy page with ordered knowledge domains.

--- a/content/posts/智慧型自動化壓力測試系統.en.md
+++ b/content/posts/智慧型自動化壓力測試系統.en.md
@@ -10,6 +10,9 @@ tags:
 - Deep Learning & Machine Learning
 - Automation
 - CI/CD
+- IPMI
+- Linux
+- Server BMC
 
 thumbnailImagePosition: left
 thumbnailImage: /postImg/smartfan/4D_graph.png
